tests/stderr-snapshots/integration__integration__mapfiles__abi_string_errors.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: mutually exclusive attributes 'len' and 'bs' in 'z' format
  ┌─ <mapfile-1>:3:5
  │
3 │ 0 z(len=20;bs=4)
  │     ^^^    ^^

error: 'len' attribute is not supported by 'p'
  ┌─ <mapfile-1>:4:5
  │
4 │ 1 p(len=20)
  │     ^^^

error: missing length attribute ('len' or 'bs') for 'p'
  ┌─ <mapfile-1>:5:3
  │
5 │ 2 p
  │   ^


